fix collapse container

--- a/src/styles/components/NavBar.module.scss
+++ b/src/styles/components/NavBar.module.scss
@@ -98,6 +98,7 @@
     align-items: center;
     gap: 71px;
     position: absolute;
+    z-index: 999;
     transform: translateX(-50%);
     left: 50%;
     top: 46px;
